--- a/alircxa.conf
+++ b/alircxa.conf
@@ -1,9 +1,9 @@
-# Shadowrocket: 2023-02-08 11:28:44
+# Update: 2023-02-16 15:00
 [General]
 bypass-system = true
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local
 ipv6 = false
-update-url = https://config.alirezarostaminia.ir/alircxa.conf
+update-url = https://kut.st/conf
 # CloudFlare and Google dns
 # dns-server = 1.1.1.1, 8.8.8.8
 # Lan
