--- a/alircxa.conf
+++ b/alircxa.conf
@@ -1,4 +1,4 @@
-# Update: 2023-02-16 15:00
+# Shadowrocket: 2023-02-25 10:28:15
 [General]
 bypass-system = true
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local
@@ -57,6 +57,13 @@ DOMAIN-SUFFIX,tapsi.cab,DIRECT
 DOMAIN-SUFFIX,wikimedia.org,DIRECT
 DOMAIN-SUFFIX,wikipedia.org,DIRECT
 DOMAIN-SUFFIX,zoodfood.com,DIRECT
+DOMAIN-SUFFIX,local,DIRECT
+IP-CIDR,127.0.0.0/8,DIRECT
+IP-CIDR,172.16.0.0/12,DIRECT
+IP-CIDR,192.168.0.0/16,DIRECT
+IP-CIDR,17.0.0.0/8,DIRECT
+IP-CIDR,100.64.0.0/10,DIRECT
+IP-CIDR,224.0.0.0/4,DIRECT
 IP-CIDR,95.217.193.11/32,DIRECT
 USER-AGENT,blu*,DIRECT
 GEOIP,IR,DIRECT
