--- a/alircxa.conf
+++ b/alircxa.conf
@@ -7,6 +7,7 @@ update-url = https://kut.st/conf
 # CloudFlare and Google dns
 # dns-server = 1.1.1.1, 8.8.8.8
 # Lan
+# Test
 
 [Rule]
 RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/proxy/telegram.list,PROXY
