--- a/alircxa.conf
+++ b/alircxa.conf
@@ -30,6 +30,7 @@ DOMAIN,smtp.gmail.com,DIRECT
 DOMAIN,smtp.mail.me.com,DIRECT
 DOMAIN,smtp.mail.yahoo.com,DIRECT
 DOMAIN-SUFFIX,ahmadhashemi.com,DIRECT
+DOMAIN-SUFFIX,asanpardakht.com,DIRECT
 DOMAIN-SUFFIX,bankino.digital,DIRECT
 DOMAIN-SUFFIX,blubank.com,DIRECT
 DOMAIN-SUFFIX,bookapo.com,DIRECT
