--- a/alircxa.conf
+++ b/alircxa.conf
@@ -1,4 +1,4 @@
-# Shadowrocket: 2023-02-25 10:28:15
+# Shadowrocket: 2023-03-12 09:29:46
 [General]
 bypass-system = true
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local
@@ -9,7 +9,7 @@ update-url = https://kut.st/conf
 # Lan
 
 [Rule]
-RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/proxy/telegram.list,PROXY
+#RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/proxy/telegram.list,PROXY
 #DOMAIN-SUFFIX,icloud-content.com,DIRECT
 #DOMAIN-SUFFIX,jit.si,DIRECT
 #DOMAIN-SUFFIX,jitsi.net,DIRECT
@@ -51,8 +51,8 @@ DOMAIN-SUFFIX,snapp.site,DIRECT
 DOMAIN-SUFFIX,snapp.taxi,DIRECT
 DOMAIN-SUFFIX,sndcdn.com,DIRECT
 DOMAIN-SUFFIX,soundcloud.com,DIRECT
-DOMAIN-SUFFIX,spotify.com,DIRECT
-DOMAIN-SUFFIX,spotifycdn.com,DIRECT
+#DOMAIN-SUFFIX,spotify.com,DIRECT
+#DOMAIN-SUFFIX,spotifycdn.com,DIRECT
 DOMAIN-SUFFIX,taaghche.com,DIRECT
 DOMAIN-SUFFIX,tap30.services,DIRECT
 DOMAIN-SUFFIX,tapsi.cab,DIRECT
