--- a/alircxa.conf
+++ b/alircxa.conf
@@ -1,4 +1,4 @@
-# Shadowrocket: 2023-03-12 09:29:46
+# Shadowrocket: 2023-03-13 08:28:21
 [General]
 bypass-system = true
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local
@@ -42,7 +42,7 @@ DOMAIN-SUFFIX,fidibo.com,DIRECT
 DOMAIN-SUFFIX,ir,DIRECT
 DOMAIN-SUFFIX,mrbilit.com,DIRECT
 DOMAIN-SUFFIX,sazito.com,DIRECT
-DOMAIN-SUFFIX,scdn.co,DIRECT
+#DOMAIN-SUFFIX,scdn.co,DIRECT
 DOMAIN-SUFFIX,sdb247.com,DIRECT
 DOMAIN-SUFFIX,serveriran.net,DIRECT
 DOMAIN-SUFFIX,snapp-food.com,DIRECT
@@ -51,8 +51,8 @@ DOMAIN-SUFFIX,snapp.site,DIRECT
 DOMAIN-SUFFIX,snapp.taxi,DIRECT
 DOMAIN-SUFFIX,sndcdn.com,DIRECT
 DOMAIN-SUFFIX,soundcloud.com,DIRECT
-#DOMAIN-SUFFIX,spotify.com,DIRECT
-#DOMAIN-SUFFIX,spotifycdn.com,DIRECT
+DOMAIN-SUFFIX,spotify.com,DIRECT
+DOMAIN-SUFFIX,spotifycdn.com,DIRECT
 DOMAIN-SUFFIX,taaghche.com,DIRECT
 DOMAIN-SUFFIX,tap30.services,DIRECT
 DOMAIN-SUFFIX,tapsi.cab,DIRECT
