--- a/alircxa.conf
+++ b/alircxa.conf
@@ -1,15 +1,15 @@
-# Shadowrocket: 2023-03-13 08:28:21
+# Shadowrocket: 2023-04-06 23:36:57
 [General]
 bypass-system = true
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local
 ipv6 = false
 update-url = https://kut.st/conf
 # CloudFlare and Google dns
-# dns-server = 1.1.1.1, 8.8.8.8
+# dns-server = 178.22.122.100, 185.51.200.2
 # Lan
 
 [Rule]
-#RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/proxy/telegram.list,PROXY
+RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/proxy/telegram.list,PROXY
 #DOMAIN-SUFFIX,icloud-content.com,DIRECT
 #DOMAIN-SUFFIX,jit.si,DIRECT
 #DOMAIN-SUFFIX,jitsi.net,DIRECT
@@ -51,19 +51,21 @@ DOMAIN-SUFFIX,snapp.site,DIRECT
 DOMAIN-SUFFIX,snapp.taxi,DIRECT
 DOMAIN-SUFFIX,sndcdn.com,DIRECT
 DOMAIN-SUFFIX,soundcloud.com,DIRECT
-DOMAIN-SUFFIX,spotify.com,DIRECT
-DOMAIN-SUFFIX,spotifycdn.com,DIRECT
+#DOMAIN-SUFFIX,spotify.com,DIRECT
+#DOMAIN-SUFFIX,spotifycdn.com,DIRECT
 DOMAIN-SUFFIX,taaghche.com,DIRECT
 DOMAIN-SUFFIX,tap30.services,DIRECT
 DOMAIN-SUFFIX,tapsi.cab,DIRECT
 DOMAIN-SUFFIX,wikimedia.org,DIRECT
 DOMAIN-SUFFIX,wikipedia.org,DIRECT
+DOMAIN-SUFFIX,oneplus.com,DIRECT
 DOMAIN-SUFFIX,zoodfood.com,DIRECT
+DOMAIN-SUFFIX,cando.ac,DIRECT
 DOMAIN-SUFFIX,local,DIRECT
 IP-CIDR,127.0.0.0/8,DIRECT
 IP-CIDR,172.16.0.0/12,DIRECT
 IP-CIDR,192.168.0.0/16,DIRECT
-IP-CIDR,17.0.0.0/8,DIRECT
+#IP-CIDR,17.0.0.0/8,DIRECT
 IP-CIDR,100.64.0.0/10,DIRECT
 IP-CIDR,224.0.0.0/4,DIRECT
 IP-CIDR,95.217.193.11/32,DIRECT
