--- a/alircxa.conf
+++ b/alircxa.conf
@@ -1,8 +1,8 @@
-# Shadowrocket: 2023-04-06 23:36:57
+# Shadowrocket: 2023-04-21 11:32:37
 [General]
 bypass-system = true
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local
-ipv6 = false
+ipv6 = true
 update-url = https://kut.st/conf
 # CloudFlare and Google dns
 # dns-server = 178.22.122.100, 185.51.200.2
@@ -17,6 +17,9 @@ RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/proxy/t
 #DOMAIN-SUFFIX,whatsapp.net,DIRECT
 #USER-AGENT,jitsi-meet*,DIRECT
 #USER-AGENT,WhatsApp*,DIRECT
+#DOMAIN-SUFFIX,scdn.co,DIRECT
+#DOMAIN-SUFFIX,spotify.com,DIRECT
+#DOMAIN-SUFFIX,spotifycdn.com,DIRECT
 DOMAIN,imap.gmail.com,DIRECT
 DOMAIN,imap.gmx.com,DIRECT
 DOMAIN,imap.mail.me.com,DIRECT
@@ -34,6 +37,7 @@ DOMAIN-SUFFIX,asanpardakht.com,DIRECT
 DOMAIN-SUFFIX,bankino.digital,DIRECT
 DOMAIN-SUFFIX,blubank.com,DIRECT
 DOMAIN-SUFFIX,bookapo.com,DIRECT
+DOMAIN-SUFFIX,cando.ac,DIRECT
 DOMAIN-SUFFIX,cinematicket.org,DIRECT
 DOMAIN-SUFFIX,digikala.com,DIRECT
 DOMAIN-SUFFIX,digikalacloud.com,DIRECT
@@ -41,8 +45,9 @@ DOMAIN-SUFFIX,divarcdn.com,DIRECT
 DOMAIN-SUFFIX,fidibo.com,DIRECT
 DOMAIN-SUFFIX,ir,DIRECT
 DOMAIN-SUFFIX,mrbilit.com,DIRECT
+DOMAIN-SUFFIX,oneplus.com,DIRECT
 DOMAIN-SUFFIX,sazito.com,DIRECT
-#DOMAIN-SUFFIX,scdn.co,DIRECT
+DOMAIN-SUFFIX,sazito.com,DIRECT
 DOMAIN-SUFFIX,sdb247.com,DIRECT
 DOMAIN-SUFFIX,serveriran.net,DIRECT
 DOMAIN-SUFFIX,snapp-food.com,DIRECT
@@ -51,16 +56,12 @@ DOMAIN-SUFFIX,snapp.site,DIRECT
 DOMAIN-SUFFIX,snapp.taxi,DIRECT
 DOMAIN-SUFFIX,sndcdn.com,DIRECT
 DOMAIN-SUFFIX,soundcloud.com,DIRECT
-#DOMAIN-SUFFIX,spotify.com,DIRECT
-#DOMAIN-SUFFIX,spotifycdn.com,DIRECT
 DOMAIN-SUFFIX,taaghche.com,DIRECT
 DOMAIN-SUFFIX,tap30.services,DIRECT
 DOMAIN-SUFFIX,tapsi.cab,DIRECT
 DOMAIN-SUFFIX,wikimedia.org,DIRECT
 DOMAIN-SUFFIX,wikipedia.org,DIRECT
-DOMAIN-SUFFIX,oneplus.com,DIRECT
 DOMAIN-SUFFIX,zoodfood.com,DIRECT
-DOMAIN-SUFFIX,cando.ac,DIRECT
 DOMAIN-SUFFIX,local,DIRECT
 IP-CIDR,127.0.0.0/8,DIRECT
 IP-CIDR,172.16.0.0/12,DIRECT
