icloud-content direct

--- a/alircxa.conf
+++ b/alircxa.conf
@@ -10,7 +10,7 @@ update-url = https://kut.st/conf
 
 [Rule]
 RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/proxy/telegram.list,PROXY
-#DOMAIN-SUFFIX,icloud-content.com,DIRECT
+DOMAIN-SUFFIX,icloud-content.com,DIRECT
 #DOMAIN-SUFFIX,jit.si,DIRECT
 #DOMAIN-SUFFIX,jitsi.net,DIRECT
 #DOMAIN-SUFFIX,mustapp.com,DIRECT
