--- a/alircxa.conf
+++ b/alircxa.conf
@@ -1,16 +1,15 @@
-# Shadowrocket: 2023-04-21 11:58:00
+# Shadowrocket: 2023-04-22 00:03:23
 [General]
 bypass-system = true
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local
 ipv6 = true
 update-url = https://kut.st/conf
-# CloudFlare and Google dns
-# dns-server = 178.22.122.100, 185.51.200.2
+# Shecan DNS
+dns-server = 178.22.122.100, 185.51.200.2
 # Lan
 
 [Rule]
 RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/proxy/telegram.list,PROXY
-DOMAIN-SUFFIX,icloud-content.com,DIRECT
 #DOMAIN-SUFFIX,jit.si,DIRECT
 #DOMAIN-SUFFIX,jitsi.net,DIRECT
 #DOMAIN-SUFFIX,mustapp.com,DIRECT
@@ -43,9 +42,11 @@ DOMAIN-SUFFIX,digikala.com,DIRECT
 DOMAIN-SUFFIX,digikalacloud.com,DIRECT
 DOMAIN-SUFFIX,divarcdn.com,DIRECT
 DOMAIN-SUFFIX,fidibo.com,DIRECT
+DOMAIN-SUFFIX,icloud-content.com,DIRECT
 DOMAIN-SUFFIX,ir,DIRECT
 DOMAIN-SUFFIX,mrbilit.com,DIRECT
 DOMAIN-SUFFIX,oneplus.com,DIRECT
+DOMAIN-SUFFIX,openai.com,DIRECT
 DOMAIN-SUFFIX,sazito.com,DIRECT
 DOMAIN-SUFFIX,sazito.com,DIRECT
 DOMAIN-SUFFIX,sdb247.com,DIRECT
