--- a/alircxa.conf
+++ b/alircxa.conf
@@ -4,8 +4,8 @@ bypass-system = true
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local
 ipv6 = true
 update-url = https://kut.st/conf
-# Shecan DNS
-dns-server = 178.22.122.100, 185.51.200.2
+# 403 Online DNS
+dns-server = 10.202.10.102, 10.202.10.202
 # Lan
 
 [Rule]
