--- a/alircxa.conf
+++ b/alircxa.conf
@@ -45,6 +45,7 @@ DOMAIN-SUFFIX,fidibo.com,DIRECT
 DOMAIN-SUFFIX,icloud-content.com,DIRECT
 DOMAIN-SUFFIX,ir,DIRECT
 DOMAIN-SUFFIX,mrbilit.com,DIRECT
+DOMAIN-SUFFIX,nitroflare.com,DIRECT
 DOMAIN-SUFFIX,oneplus.com,DIRECT
 DOMAIN-SUFFIX,openai.com,DIRECT
 DOMAIN-SUFFIX,sazito.com,DIRECT
