--- a/alircxa.conf
+++ b/alircxa.conf
@@ -53,6 +53,7 @@ DOMAIN-SUFFIX,sazito.com,DIRECT
 DOMAIN-SUFFIX,sdb247.com,DIRECT
 DOMAIN-SUFFIX,serveriran.net,DIRECT
 DOMAIN-SUFFIX,snapp-food.com,DIRECT
+DOMAIN-SUFFIX,snapp.express,DIRECT
 DOMAIN-SUFFIX,snapp.doctor,DIRECT
 DOMAIN-SUFFIX,snapp.site,DIRECT
 DOMAIN-SUFFIX,snapp.taxi,DIRECT
