--- a/alircxa.conf
+++ b/alircxa.conf
@@ -5,7 +5,7 @@ skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local
 ipv6 = true
 update-url = https://kut.st/conf
 # 403 Online DNS
-dns-server = 10.202.10.102, 10.202.10.202
+# dns-server = 10.202.10.102, 10.202.10.202
 # Lan
 
 [Rule]
