--- a/alircxa.conf
+++ b/alircxa.conf
@@ -48,6 +48,7 @@ DOMAIN-SUFFIX,mrbilit.com,DIRECT
 DOMAIN-SUFFIX,nitroflare.com,DIRECT
 DOMAIN-SUFFIX,oneplus.com,DIRECT
 DOMAIN-SUFFIX,openai.com,DIRECT
+DOMAIN-SUFFIX,parsget.com,DIRECT
 DOMAIN-SUFFIX,sazito.com,DIRECT
 DOMAIN-SUFFIX,sazito.com,DIRECT
 DOMAIN-SUFFIX,sdb247.com,DIRECT
