--- a/alircxa.conf
+++ b/alircxa.conf
@@ -45,11 +45,11 @@ DOMAIN-SUFFIX,fidibo.com,DIRECT
 DOMAIN-SUFFIX,icloud-content.com,DIRECT
 DOMAIN-SUFFIX,ir,DIRECT
 DOMAIN-SUFFIX,mrbilit.com,DIRECT
+DOMAIN-SUFFIX,nightmovie1.pro,DIRECT
 DOMAIN-SUFFIX,nitroflare.com,DIRECT
 DOMAIN-SUFFIX,oneplus.com,DIRECT
 DOMAIN-SUFFIX,openai.com,DIRECT
 DOMAIN-SUFFIX,parsget.com,DIRECT
-DOMAIN-SUFFIX,sazito.com,DIRECT
 DOMAIN-SUFFIX,sazito.com,DIRECT
 DOMAIN-SUFFIX,sdb247.com,DIRECT
 DOMAIN-SUFFIX,serveriran.net,DIRECT
@@ -65,6 +65,7 @@ DOMAIN-SUFFIX,tap30.services,DIRECT
 DOMAIN-SUFFIX,tapsi.cab,DIRECT
 DOMAIN-SUFFIX,wikimedia.org,DIRECT
 DOMAIN-SUFFIX,wikipedia.org,DIRECT
+DOMAIN-SUFFIX,yellownightmovie.online,DIRECT
 DOMAIN-SUFFIX,zoodfood.com,DIRECT
 DOMAIN-SUFFIX,local,DIRECT
 IP-CIDR,127.0.0.0/8,DIRECT
