--- a/alircxa.conf
+++ b/alircxa.conf
@@ -68,7 +68,8 @@ DOMAIN-SUFFIX,wikipedia.org,DIRECT
 DOMAIN-SUFFIX,yellownightmovie.online,DIRECT
 DOMAIN-SUFFIX,zoodfood.com,DIRECT
 DOMAIN-SUFFIX,local,DIRECT
-IP-CIDR,127.0.0.0/8,DIRECT
+#IP-CIDR,127.0.0.0/8,DIRECT
+#WilfRiftConflict
 IP-CIDR,172.16.0.0/12,DIRECT
 IP-CIDR,192.168.0.0/16,DIRECT
 #IP-CIDR,17.0.0.0/8,DIRECT
