--- a/alircxa.conf
+++ b/alircxa.conf
@@ -19,6 +19,7 @@ RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/proxy/t
 #DOMAIN-SUFFIX,scdn.co,DIRECT
 #DOMAIN-SUFFIX,spotify.com,DIRECT
 #DOMAIN-SUFFIX,spotifycdn.com,DIRECT
+DOMAIN,bard.google.com,DIRECT
 DOMAIN,imap.gmail.com,DIRECT
 DOMAIN,imap.gmx.com,DIRECT
 DOMAIN,imap.mail.me.com,DIRECT
