--- a/alircxa.conf
+++ b/alircxa.conf
@@ -1,4 +1,3 @@
-# Shadowrocket: 2023-05-19 00:53:00
 [General]
 bypass-system = true
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local
@@ -22,7 +21,6 @@ RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/proxy/t
 DOMAIN,bard.google.com,DIRECT
 DOMAIN,imap.gmail.com,DIRECT
 DOMAIN,imap.gmx.com,DIRECT
-DOMAIN,imap.mail.me.com,DIRECT
 DOMAIN,imap.mail.yahoo.com,DIRECT
 DOMAIN,mail.gmx.com,DIRECT
 DOMAIN,meet.google.com,DIRECT
@@ -33,6 +31,7 @@ DOMAIN,smtp.gmail.com,DIRECT
 DOMAIN,smtp.mail.me.com,DIRECT
 DOMAIN,smtp.mail.yahoo.com,DIRECT
 DOMAIN-SUFFIX,ahmadhashemi.com,DIRECT
+DOMAIN-SUFFIX,apple-cloudkit.com,DIRECT
 DOMAIN-SUFFIX,asanpardakht.com,DIRECT
 DOMAIN-SUFFIX,bankino.digital,DIRECT
 DOMAIN-SUFFIX,blubank.com,DIRECT
@@ -44,7 +43,9 @@ DOMAIN-SUFFIX,digikalacloud.com,DIRECT
 DOMAIN-SUFFIX,divarcdn.com,DIRECT
 DOMAIN-SUFFIX,fidibo.com,DIRECT
 DOMAIN-SUFFIX,icloud-content.com,DIRECT
+DOMAIN-SUFFIX,icloud.com,DIRECT
 DOMAIN-SUFFIX,ir,DIRECT
+DOMAIN-SUFFIX,me.com,DIRECT
 DOMAIN-SUFFIX,mrbilit.com,DIRECT
 DOMAIN-SUFFIX,nightmovie1.pro,DIRECT
 DOMAIN-SUFFIX,nitroflare.com,DIRECT
