--- a/alircxa.conf
+++ b/alircxa.conf
@@ -30,6 +30,7 @@ DOMAIN,smtp-mail.outlook.com,DIRECT
 DOMAIN,smtp.gmail.com,DIRECT
 DOMAIN,smtp.mail.me.com,DIRECT
 DOMAIN,smtp.mail.yahoo.com,DIRECT
+DOMAIN-SUFFIX,anydesk.com,DIRECT
 DOMAIN-SUFFIX,ahmadhashemi.com,DIRECT
 DOMAIN-SUFFIX,apple-cloudkit.com,DIRECT
 DOMAIN-SUFFIX,asanpardakht.com,DIRECT
