--- a/alircxa.conf
+++ b/alircxa.conf
@@ -18,6 +18,8 @@ RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/proxy/t
 #DOMAIN-SUFFIX,scdn.co,DIRECT
 #DOMAIN-SUFFIX,spotify.com,DIRECT
 #DOMAIN-SUFFIX,spotifycdn.com,DIRECT
+#DOMAIN-SUFFIX,sndcdn.com,DIRECT
+#DOMAIN-SUFFIX,soundcloud.com,DIRECT
 DOMAIN,bard.google.com,DIRECT
 DOMAIN,imap.gmail.com,DIRECT
 DOMAIN,imap.gmx.com,DIRECT
@@ -61,8 +63,6 @@ DOMAIN-SUFFIX,snapp.doctor,DIRECT
 DOMAIN-SUFFIX,snapp.express,DIRECT
 DOMAIN-SUFFIX,snapp.site,DIRECT
 DOMAIN-SUFFIX,snapp.taxi,DIRECT
-DOMAIN-SUFFIX,sndcdn.com,DIRECT
-DOMAIN-SUFFIX,soundcloud.com,DIRECT
 DOMAIN-SUFFIX,taaghche.com,DIRECT
 DOMAIN-SUFFIX,tap30.services,DIRECT
 DOMAIN-SUFFIX,tapsi.cab,DIRECT
