virgool.io rule added.

--- a/alircxa.conf
+++ b/alircxa.conf
@@ -32,8 +32,8 @@ DOMAIN,smtp-mail.outlook.com,DIRECT
 DOMAIN,smtp.gmail.com,DIRECT
 DOMAIN,smtp.mail.me.com,DIRECT
 DOMAIN,smtp.mail.yahoo.com,DIRECT
-DOMAIN-SUFFIX,anydesk.com,DIRECT
 DOMAIN-SUFFIX,ahmadhashemi.com,DIRECT
+DOMAIN-SUFFIX,anydesk.com,DIRECT
 DOMAIN-SUFFIX,apple-cloudkit.com,DIRECT
 DOMAIN-SUFFIX,asanpardakht.com,DIRECT
 DOMAIN-SUFFIX,bankino.digital,DIRECT
@@ -66,6 +66,7 @@ DOMAIN-SUFFIX,snapp.taxi,DIRECT
 DOMAIN-SUFFIX,taaghche.com,DIRECT
 DOMAIN-SUFFIX,tap30.services,DIRECT
 DOMAIN-SUFFIX,tapsi.cab,DIRECT
+DOMAIN-SUFFIX,virgool.io,DIRECT
 DOMAIN-SUFFIX,wikimedia.org,DIRECT
 DOMAIN-SUFFIX,wikipedia.org,DIRECT
 DOMAIN-SUFFIX,yellownightmovie.online,DIRECT
