--- a/alircxa.conf
+++ b/alircxa.conf
@@ -45,6 +45,7 @@ DOMAIN-SUFFIX,digikala.com,DIRECT
 DOMAIN-SUFFIX,digikalacloud.com,DIRECT
 DOMAIN-SUFFIX,divarcdn.com,DIRECT
 DOMAIN-SUFFIX,fidibo.com,DIRECT
+DOMAIN-SUFFIX,freeserver.top,DIRECT
 DOMAIN-SUFFIX,harrods.com,DIRECT
 DOMAIN-SUFFIX,icloud-content.com,DIRECT
 DOMAIN-SUFFIX,icloud.com,DIRECT
