--- a/alircxa.conf
+++ b/alircxa.conf
@@ -1,17 +1,19 @@
+# Shadowrocket: 2023-10-15 14:28:44
 [General]
 bypass-system = true
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local
 ipv6 = true
 update-url = https://kut.st/conf
-# 403 Online DNS
+# DNS
 # dns-server = 10.202.10.102, 10.202.10.202
 # Lan
 
 [Rule]
+DOMAIN-SUFFIX,apple.com,DIRECT
 RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/proxy/telegram.list,PROXY
 #DOMAIN-SUFFIX,jit.si,DIRECT
 #DOMAIN-SUFFIX,jitsi.net,DIRECT
-#DOMAIN-SUFFIX,mustapp.com,DIRECT
+DOMAIN-SUFFIX,mustapp.com,DIRECT
 #DOMAIN-SUFFIX,whatsapp.net,DIRECT
 #USER-AGENT,jitsi-meet*,DIRECT
 #USER-AGENT,WhatsApp*,DIRECT
