--- a/alircxa.conf
+++ b/alircxa.conf
@@ -1,4 +1,4 @@
-# Shadowrocket: 2023-10-19 16:06:55
+# Shadowrocket: 2023-10-26 12:57:19
 [General]
 bypass-system = true
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local
@@ -9,6 +9,7 @@ update-url = https://kut.st/conf
 # Lan
 
 [Rule]
+#DOMAIN-SUFFIX,apple.com,DIRECT
 RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/proxy/telegram.list,PROXY
 #DOMAIN-SUFFIX,jit.si,DIRECT
 #DOMAIN-SUFFIX,jitsi.net,DIRECT
@@ -22,21 +23,20 @@ DOMAIN-SUFFIX,mustapp.com,DIRECT
 #DOMAIN-SUFFIX,sndcdn.com,DIRECT
 #DOMAIN-SUFFIX,soundcloud.com,DIRECT
 DOMAIN,bard.google.com,DIRECT
-DOMAIN,imap.gmail.com,DIRECT
-DOMAIN,imap.gmx.com,DIRECT
-DOMAIN,imap.mail.yahoo.com,DIRECT
-DOMAIN,mail.gmx.com,DIRECT
+#DOMAIN,imap.gmail.com,DIRECT
+#DOMAIN,imap.gmx.com,DIRECT
+#DOMAIN,imap.mail.yahoo.com,DIRECT
+#DOMAIN,mail.gmx.com,DIRECT
 DOMAIN,meet.google.com,DIRECT
-DOMAIN,mx.freenet.de,DIRECT
-DOMAIN,outlook.office365.com,DIRECT
-DOMAIN,smtp-mail.outlook.com,DIRECT
-DOMAIN,smtp.gmail.com,DIRECT
-DOMAIN,smtp.mail.me.com,DIRECT
-DOMAIN,smtp.mail.yahoo.com,DIRECT
-DOMAIN-SUFFIX,apple.com,DIRECT
+#DOMAIN,mx.freenet.de,DIRECT
+#DOMAIN,outlook.office365.com,DIRECT
+#DOMAIN,smtp-mail.outlook.com,DIRECT
+#DOMAIN,smtp.gmail.com,DIRECT
+#DOMAIN,smtp.mail.me.com,DIRECT
+#DOMAIN,smtp.mail.yahoo.com,DIRECT
 DOMAIN-SUFFIX,ahmadhashemi.com,DIRECT
 DOMAIN-SUFFIX,anydesk.com,DIRECT
-DOMAIN-SUFFIX,apple-cloudkit.com,DIRECT
+#DOMAIN-SUFFIX,apple-cloudkit.com,DIRECT
 DOMAIN-SUFFIX,asanpardakht.com,DIRECT
 DOMAIN-SUFFIX,bankino.digital,DIRECT
 DOMAIN-SUFFIX,blubank.com,DIRECT
@@ -49,8 +49,8 @@ DOMAIN-SUFFIX,divarcdn.com,DIRECT
 DOMAIN-SUFFIX,fidibo.com,DIRECT
 DOMAIN-SUFFIX,freeserver.top,DIRECT
 DOMAIN-SUFFIX,harrods.com,DIRECT
-DOMAIN-SUFFIX,icloud-content.com,DIRECT
-DOMAIN-SUFFIX,icloud.com,DIRECT
+#DOMAIN-SUFFIX,icloud-content.com,DIRECT
+#DOMAIN-SUFFIX,icloud.com,DIRECT
 DOMAIN-SUFFIX,ir,DIRECT
 DOMAIN-SUFFIX,me.com,DIRECT
 DOMAIN-SUFFIX,mrbilit.com,DIRECT
