--- a/alircxa.conf
+++ b/alircxa.conf
@@ -1,4 +1,4 @@
-# Shadowrocket: 2023-10-26 12:57:19
+# Shadowrocket: 2023-10-27 12:21:16
 [General]
 bypass-system = true
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local
@@ -9,34 +9,41 @@ update-url = https://kut.st/conf
 # Lan
 
 [Rule]
-#DOMAIN-SUFFIX,apple.com,DIRECT
+#Rule
 RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/proxy/telegram.list,PROXY
-#DOMAIN-SUFFIX,jit.si,DIRECT
-#DOMAIN-SUFFIX,jitsi.net,DIRECT
-DOMAIN-SUFFIX,mustapp.com,DIRECT
-#DOMAIN-SUFFIX,whatsapp.net,DIRECT
-#USER-AGENT,jitsi-meet*,DIRECT
-#USER-AGENT,WhatsApp*,DIRECT
-#DOMAIN-SUFFIX,scdn.co,DIRECT
-#DOMAIN-SUFFIX,spotify.com,DIRECT
-#DOMAIN-SUFFIX,spotifycdn.com,DIRECT
-#DOMAIN-SUFFIX,sndcdn.com,DIRECT
-#DOMAIN-SUFFIX,soundcloud.com,DIRECT
-DOMAIN,bard.google.com,DIRECT
 #DOMAIN,imap.gmail.com,DIRECT
 #DOMAIN,imap.gmx.com,DIRECT
 #DOMAIN,imap.mail.yahoo.com,DIRECT
 #DOMAIN,mail.gmx.com,DIRECT
-DOMAIN,meet.google.com,DIRECT
 #DOMAIN,mx.freenet.de,DIRECT
 #DOMAIN,outlook.office365.com,DIRECT
 #DOMAIN,smtp-mail.outlook.com,DIRECT
 #DOMAIN,smtp.gmail.com,DIRECT
 #DOMAIN,smtp.mail.me.com,DIRECT
 #DOMAIN,smtp.mail.yahoo.com,DIRECT
+#Apple
+#DOMAIN-SUFFIX,apple-cloudkit.com,DIRECT
+#DOMAIN-SUFFIX,apple.com,DIRECT
+#DOMAIN-SUFFIX,icloud-content.com,DIRECT
+#DOMAIN-SUFFIX,icloud.com,DIRECT
+#
+#DOMAIN-SUFFIX,jit.si,DIRECT
+#DOMAIN-SUFFIX,jitsi.net,DIRECT
+#Soundcloud
+#DOMAIN-SUFFIX,scdn.co,DIRECT
+#DOMAIN-SUFFIX,sndcdn.com,DIRECT
+#DOMAIN-SUFFIX,soundcloud.com,DIRECT
+#Spotify
+#DOMAIN-SUFFIX,spotify.com,DIRECT
+#DOMAIN-SUFFIX,spotifycdn.com,DIRECT
+#
+#DOMAIN-SUFFIX,whatsapp.net,DIRECT
+#USER-AGENT,jitsi-meet*,DIRECT
+#USER-AGENT,WhatsApp*,DIRECT
+DOMAIN,bard.google.com,DIRECT
+DOMAIN,meet.google.com,DIRECT
 DOMAIN-SUFFIX,ahmadhashemi.com,DIRECT
 DOMAIN-SUFFIX,anydesk.com,DIRECT
-#DOMAIN-SUFFIX,apple-cloudkit.com,DIRECT
 DOMAIN-SUFFIX,asanpardakht.com,DIRECT
 DOMAIN-SUFFIX,bankino.digital,DIRECT
 DOMAIN-SUFFIX,blubank.com,DIRECT
@@ -48,15 +55,12 @@ DOMAIN-SUFFIX,digikalacloud.com,DIRECT
 DOMAIN-SUFFIX,divarcdn.com,DIRECT
 DOMAIN-SUFFIX,fidibo.com,DIRECT
 DOMAIN-SUFFIX,freeserver.top,DIRECT
-DOMAIN-SUFFIX,harrods.com,DIRECT
-#DOMAIN-SUFFIX,icloud-content.com,DIRECT
-#DOMAIN-SUFFIX,icloud.com,DIRECT
 DOMAIN-SUFFIX,ir,DIRECT
+DOMAIN-SUFFIX,local,DIRECT
 DOMAIN-SUFFIX,me.com,DIRECT
 DOMAIN-SUFFIX,mrbilit.com,DIRECT
-DOMAIN-SUFFIX,nightmovie1.pro,DIRECT
-DOMAIN-SUFFIX,nitroflare.com,DIRECT
-DOMAIN-SUFFIX,oneplus.com,DIRECT
+DOMAIN-SUFFIX,mustapp.com,DIRECT
+#DOMAIN-SUFFIX,nitroflare.com,DIRECT
 DOMAIN-SUFFIX,openai.com,DIRECT
 DOMAIN-SUFFIX,parsget.com,DIRECT
 DOMAIN-SUFFIX,sazito.com,DIRECT
@@ -74,14 +78,13 @@ DOMAIN-SUFFIX,tapsi.cab,DIRECT
 DOMAIN-SUFFIX,virgool.io,DIRECT
 DOMAIN-SUFFIX,wikimedia.org,DIRECT
 DOMAIN-SUFFIX,wikipedia.org,DIRECT
-DOMAIN-SUFFIX,yellownightmovie.online,DIRECT
 DOMAIN-SUFFIX,zoodfood.com,DIRECT
-DOMAIN-SUFFIX,local,DIRECT
-#IP-CIDR,127.0.0.0/8,DIRECT
 #WilfRiftConflict
+#IP-CIDR,127.0.0.0/8,DIRECT
+#
+#IP-CIDR,17.0.0.0/8,DIRECT
 IP-CIDR,172.16.0.0/12,DIRECT
 IP-CIDR,192.168.0.0/16,DIRECT
-#IP-CIDR,17.0.0.0/8,DIRECT
 IP-CIDR,100.64.0.0/10,DIRECT
 IP-CIDR,224.0.0.0/4,DIRECT
 IP-CIDR,95.217.193.11/32,DIRECT
