--- a/alircxa.conf
+++ b/alircxa.conf
@@ -1,4 +1,4 @@
-# Shadowrocket: 2023-10-27 12:21:16
+# Shadowrocket: 2023-11-17 07:22:31
 [General]
 bypass-system = true
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local
@@ -21,25 +21,28 @@ RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/proxy/t
 #DOMAIN,smtp.gmail.com,DIRECT
 #DOMAIN,smtp.mail.me.com,DIRECT
 #DOMAIN,smtp.mail.yahoo.com,DIRECT
+#DOMAIN-SUFFIX,openai.com,DIRECT
+#DOMAIN-SUFFIX,whatsapp.net,DIRECT
+#USER-AGENT,jitsi-meet*,DIRECT
+#USER-AGENT,WhatsApp*,DIRECT
+#IP-CIDR,17.0.0.0/8,DIRECT
+#WilfRiftConflict
+#IP-CIDR,127.0.0.0/8,DIRECT
 #Apple
 #DOMAIN-SUFFIX,apple-cloudkit.com,DIRECT
 #DOMAIN-SUFFIX,apple.com,DIRECT
 #DOMAIN-SUFFIX,icloud-content.com,DIRECT
 #DOMAIN-SUFFIX,icloud.com,DIRECT
-#
+#DOMAIN-SUFFIX,cdn-apple.com,DIRECT
 #DOMAIN-SUFFIX,jit.si,DIRECT
 #DOMAIN-SUFFIX,jitsi.net,DIRECT
-#Soundcloud
+#SoundCloud
 #DOMAIN-SUFFIX,scdn.co,DIRECT
 #DOMAIN-SUFFIX,sndcdn.com,DIRECT
 #DOMAIN-SUFFIX,soundcloud.com,DIRECT
 #Spotify
 #DOMAIN-SUFFIX,spotify.com,DIRECT
 #DOMAIN-SUFFIX,spotifycdn.com,DIRECT
-#
-#DOMAIN-SUFFIX,whatsapp.net,DIRECT
-#USER-AGENT,jitsi-meet*,DIRECT
-#USER-AGENT,WhatsApp*,DIRECT
 DOMAIN,bard.google.com,DIRECT
 DOMAIN,meet.google.com,DIRECT
 DOMAIN-SUFFIX,ahmadhashemi.com,DIRECT
@@ -55,18 +58,19 @@ DOMAIN-SUFFIX,digikalacloud.com,DIRECT
 DOMAIN-SUFFIX,divarcdn.com,DIRECT
 DOMAIN-SUFFIX,fidibo.com,DIRECT
 DOMAIN-SUFFIX,freeserver.top,DIRECT
+DOMAIN-SUFFIX,hiweb.one,DIRECT
 DOMAIN-SUFFIX,ir,DIRECT
 DOMAIN-SUFFIX,local,DIRECT
 DOMAIN-SUFFIX,me.com,DIRECT
 DOMAIN-SUFFIX,mrbilit.com,DIRECT
 DOMAIN-SUFFIX,mustapp.com,DIRECT
-#DOMAIN-SUFFIX,nitroflare.com,DIRECT
-DOMAIN-SUFFIX,openai.com,DIRECT
+DOMAIN-SUFFIX,nitroflare.com,DIRECT
 DOMAIN-SUFFIX,parsget.com,DIRECT
 DOMAIN-SUFFIX,sazito.com,DIRECT
 DOMAIN-SUFFIX,sdb247.com,DIRECT
 DOMAIN-SUFFIX,serveriran.net,DIRECT
 DOMAIN-SUFFIX,skype.com,DIRECT
+DOMAIN-SUFFIX,sanjesh.org,DIRECT
 DOMAIN-SUFFIX,snapp-food.com,DIRECT
 DOMAIN-SUFFIX,snapp.doctor,DIRECT
 DOMAIN-SUFFIX,snapp.express,DIRECT
@@ -79,10 +83,6 @@ DOMAIN-SUFFIX,virgool.io,DIRECT
 DOMAIN-SUFFIX,wikimedia.org,DIRECT
 DOMAIN-SUFFIX,wikipedia.org,DIRECT
 DOMAIN-SUFFIX,zoodfood.com,DIRECT
-#WilfRiftConflict
-#IP-CIDR,127.0.0.0/8,DIRECT
-#
-#IP-CIDR,17.0.0.0/8,DIRECT
 IP-CIDR,172.16.0.0/12,DIRECT
 IP-CIDR,192.168.0.0/16,DIRECT
 IP-CIDR,100.64.0.0/10,DIRECT
