--- a/alircxa.conf
+++ b/alircxa.conf
@@ -1,4 +1,4 @@
-# Shadowrocket: 2023-11-20 16:14:31
+# Shadowrocket: 2023-11-21 14:10:15
 [General]
 bypass-system = true
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local
@@ -11,16 +11,16 @@ update-url = https://kut.st/conf
 [Rule]
 #Rule
 RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/proxy/telegram.list,PROXY
-#DOMAIN,imap.gmail.com,DIRECT
-#DOMAIN,imap.gmx.com,DIRECT
-#DOMAIN,imap.mail.yahoo.com,DIRECT
-#DOMAIN,mail.gmx.com,DIRECT
-#DOMAIN,mx.freenet.de,DIRECT
-#DOMAIN,outlook.office365.com,DIRECT
-#DOMAIN,smtp-mail.outlook.com,DIRECT
-#DOMAIN,smtp.gmail.com,DIRECT
-#DOMAIN,smtp.mail.me.com,DIRECT
-#DOMAIN,smtp.mail.yahoo.com,DIRECT
+DOMAIN,imap.gmail.com,DIRECT
+DOMAIN,imap.gmx.com,DIRECT
+DOMAIN,imap.mail.yahoo.com,DIRECT
+DOMAIN,mail.gmx.com,DIRECT
+DOMAIN,mx.freenet.de,DIRECT
+DOMAIN,outlook.office365.com,DIRECT
+DOMAIN,smtp-mail.outlook.com,DIRECT
+DOMAIN,smtp.gmail.com,DIRECT
+DOMAIN,smtp.mail.me.com,DIRECT
+DOMAIN,smtp.mail.yahoo.com,DIRECT
 #Apple
 #DOMAIN-SUFFIX,apple-cloudkit.com,DIRECT
 #DOMAIN-SUFFIX,apple.com,DIRECT
@@ -61,7 +61,7 @@ DOMAIN-SUFFIX,me.com,DIRECT
 DOMAIN-SUFFIX,mrbilit.com,DIRECT
 DOMAIN-SUFFIX,mustapp.com,DIRECT
 #DOMAIN-SUFFIX,nitroflare.com,DIRECT
-DOMAIN-SUFFIX,openai.com,DIRECT
+#DOMAIN-SUFFIX,openai.com,DIRECT
 DOMAIN-SUFFIX,parsget.com,DIRECT
 DOMAIN-SUFFIX,sazito.com,DIRECT
 DOMAIN-SUFFIX,sdb247.com,DIRECT
