--- a/alircxa.conf
+++ b/alircxa.conf
@@ -1,4 +1,4 @@
-# Shadowrocket: 2023-11-21 14:10:15
+# Shadowrocket: 2023-11-28 20:08:35
 [General]
 bypass-system = true
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local
@@ -53,6 +53,7 @@ DOMAIN-SUFFIX,cinematicket.org,DIRECT
 DOMAIN-SUFFIX,digikala.com,DIRECT
 DOMAIN-SUFFIX,digikalacloud.com,DIRECT
 DOMAIN-SUFFIX,divarcdn.com,DIRECT
+DOMAIN-SUFFIX,eseminar.tv,DIRECT
 DOMAIN-SUFFIX,fidibo.com,DIRECT
 DOMAIN-SUFFIX,freeserver.top,DIRECT
 DOMAIN-SUFFIX,ir,DIRECT
