--- a/alircxa.conf
+++ b/alircxa.conf
@@ -1,4 +1,4 @@
-# Shadowrocket: 2023-11-28 20:08:35
+# Shadowrocket: 2023-12-11 14:15:39
 [General]
 bypass-system = true
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local
@@ -9,6 +9,8 @@ update-url = https://kut.st/conf
 # Lan
 
 [Rule]
+DOMAIN-SUFFIX,app-measurement.com,DIRECT
+DOMAIN-SUFFIX,saman.solutions,DIRECT
 #Rule
 RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/proxy/telegram.list,PROXY
 DOMAIN,imap.gmail.com,DIRECT
@@ -30,12 +32,12 @@ DOMAIN,smtp.mail.yahoo.com,DIRECT
 #DOMAIN-SUFFIX,jit.si,DIRECT
 #DOMAIN-SUFFIX,jitsi.net,DIRECT
 #Soundcloud
-#DOMAIN-SUFFIX,scdn.co,DIRECT
 #DOMAIN-SUFFIX,sndcdn.com,DIRECT
 #DOMAIN-SUFFIX,soundcloud.com,DIRECT
 #Spotify
-#DOMAIN-SUFFIX,spotify.com,DIRECT
-#DOMAIN-SUFFIX,spotifycdn.com,DIRECT
+DOMAIN-SUFFIX,spotify.com,DIRECT
+DOMAIN-SUFFIX,spotifycdn.com,DIRECT
+DOMAIN-SUFFIX,scdn.co,DIRECT
 #
 #DOMAIN-SUFFIX,whatsapp.net,DIRECT
 #USER-AGENT,jitsi-meet*,DIRECT
