--- a/alircxa.conf
+++ b/alircxa.conf
@@ -57,6 +57,7 @@ DOMAIN-SUFFIX,digikalacloud.com,DIRECT
 DOMAIN-SUFFIX,divarcdn.com,DIRECT
 DOMAIN-SUFFIX,eseminar.tv,DIRECT
 DOMAIN-SUFFIX,fidibo.com,DIRECT
+DOMAIN-SUFFIX,figma.com,DIRECT
 DOMAIN-SUFFIX,freeserver.top,DIRECT
 DOMAIN-SUFFIX,ir,DIRECT
 DOMAIN-SUFFIX,local,DIRECT
