--- a/alircxa.conf
+++ b/alircxa.conf
@@ -62,7 +62,7 @@ DOMAIN-SUFFIX,local,DIRECT
 DOMAIN-SUFFIX,me.com,DIRECT
 DOMAIN-SUFFIX,mrbilit.com,DIRECT
 DOMAIN-SUFFIX,mustapp.com,DIRECT
-#DOMAIN-SUFFIX,nitroflare.com,DIRECT
+DOMAIN-SUFFIX,nitroflare.com,DIRECT
 #DOMAIN-SUFFIX,openai.com,DIRECT
 DOMAIN-SUFFIX,parsget.com,DIRECT
 DOMAIN-SUFFIX,saman.solutions,DIRECT
