--- a/alircxa.conf
+++ b/alircxa.conf
@@ -70,6 +70,7 @@ DOMAIN-SUFFIX,sazito.com,DIRECT
 DOMAIN-SUFFIX,sdb247.com,DIRECT
 DOMAIN-SUFFIX,serveriran.net,DIRECT
 DOMAIN-SUFFIX,skype.com,DIRECT
+DOMAIN-SUFFIX,snapp-box.com,DIRECT
 DOMAIN-SUFFIX,snapp-food.com,DIRECT
 DOMAIN-SUFFIX,snapp.doctor,DIRECT
 DOMAIN-SUFFIX,snapp.express,DIRECT
