--- a/alircxa.conf
+++ b/alircxa.conf
@@ -1,11 +1,11 @@
-# Shadowrocket: 2024-02-03 23:39:58
+# Shadowrocket: 2024-02-06 13:09:55
 [General]
 bypass-system = true
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local
 ipv6 = true
 update-url = https://kut.st/conf
 # DNS
-dns-server = 10.202.10.102, 10.202.10.202
+dns-server = 10.202.10.202, 1.1.1.1
 # Lan
 
 [Rule]
@@ -33,9 +33,9 @@ DOMAIN,smtp.mail.yahoo.com,DIRECT
 #DOMAIN-SUFFIX,sndcdn.com,DIRECT
 #DOMAIN-SUFFIX,soundcloud.com,DIRECT
 #Spotify
-#DOMAIN-SUFFIX,spotify.com,DIRECT
-#DOMAIN-SUFFIX,spotifycdn.com,DIRECT
-#DOMAIN-SUFFIX,scdn.co,DIRECT
+DOMAIN-SUFFIX,spotify.com,DIRECT
+DOMAIN-SUFFIX,spotifycdn.com,DIRECT
+DOMAIN-SUFFIX,scdn.co,DIRECT
 #
 #DOMAIN-SUFFIX,whatsapp.net,DIRECT
 #USER-AGENT,jitsi-meet*,DIRECT
