--- a/alircxa.conf
+++ b/alircxa.conf
@@ -66,6 +66,7 @@ DOMAIN-SUFFIX,nitroflare.com,DIRECT
 #DOMAIN-SUFFIX,openai.com,DIRECT
 DOMAIN-SUFFIX,parsget.com,DIRECT
 DOMAIN-SUFFIX,saman.solutions,DIRECT
+DOMAIN-SUFFIX,sanjesh.org,DIRECT
 DOMAIN-SUFFIX,sazito.com,DIRECT
 DOMAIN-SUFFIX,sdb247.com,DIRECT
 DOMAIN-SUFFIX,serveriran.net,DIRECT
