--- a/alircxa.conf
+++ b/alircxa.conf
@@ -5,7 +5,7 @@ skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local
 ipv6 = true
 update-url = https://kut.st/conf
 # DNS
-dns-server = 10.202.10.202, 1.0.0.1
+dns-server = 1.1.1.1, 1.0.0.1
 # Lan
 
 [Rule]
@@ -33,14 +33,15 @@ DOMAIN,smtp.mail.yahoo.com,DIRECT
 #DOMAIN-SUFFIX,sndcdn.com,DIRECT
 #DOMAIN-SUFFIX,soundcloud.com,DIRECT
 #Spotify
-DOMAIN-SUFFIX,spotify.com,DIRECT
-DOMAIN-SUFFIX,spotifycdn.com,DIRECT
-DOMAIN-SUFFIX,scdn.co,DIRECT
+#DOMAIN-SUFFIX,spotify.com,DIRECT
+#DOMAIN-SUFFIX,spotifycdn.com,DIRECT
+#DOMAIN-SUFFIX,scdn.co,DIRECT
 #
+#DOMAIN,bard.google.com,DIRECT
+#DOMAIN-SUFFIX,openai.com,DIRECT
 #DOMAIN-SUFFIX,whatsapp.net,DIRECT
 #USER-AGENT,jitsi-meet*,DIRECT
 #USER-AGENT,WhatsApp*,DIRECT
-#DOMAIN,bard.google.com,DIRECT
 DOMAIN,meet.google.com,DIRECT
 DOMAIN-SUFFIX,ahmadhashemi.com,DIRECT
 DOMAIN-SUFFIX,anydesk.com,DIRECT
@@ -63,7 +64,6 @@ DOMAIN-SUFFIX,me.com,DIRECT
 DOMAIN-SUFFIX,mrbilit.com,DIRECT
 DOMAIN-SUFFIX,mustapp.com,DIRECT
 DOMAIN-SUFFIX,nitroflare.com,DIRECT
-#DOMAIN-SUFFIX,openai.com,DIRECT
 DOMAIN-SUFFIX,parsget.com,DIRECT
 DOMAIN-SUFFIX,saman.solutions,DIRECT
 DOMAIN-SUFFIX,sanjesh.org,DIRECT
@@ -84,10 +84,6 @@ DOMAIN-SUFFIX,virgool.io,DIRECT
 DOMAIN-SUFFIX,wikimedia.org,DIRECT
 DOMAIN-SUFFIX,wikipedia.org,DIRECT
 DOMAIN-SUFFIX,zoodfood.com,DIRECT
-#WilfRiftConflict
-#IP-CIDR,127.0.0.0/8,DIRECT
-#
-#IP-CIDR,17.0.0.0/8,DIRECT
 IP-CIDR,172.16.0.0/12,DIRECT
 IP-CIDR,192.168.0.0/16,DIRECT
 IP-CIDR,100.64.0.0/10,DIRECT
