--- a/alircxa.conf
+++ b/alircxa.conf
@@ -84,6 +84,10 @@ DOMAIN-SUFFIX,virgool.io,DIRECT
 DOMAIN-SUFFIX,wikimedia.org,DIRECT
 DOMAIN-SUFFIX,wikipedia.org,DIRECT
 DOMAIN-SUFFIX,zoodfood.com,DIRECT
+#WilfRiftConflict
+#IP-CIDR,127.0.0.0/8,DIRECT
+#
+#IP-CIDR,17.0.0.0/8,DIRECT
 IP-CIDR,172.16.0.0/12,DIRECT
 IP-CIDR,192.168.0.0/16,DIRECT
 IP-CIDR,100.64.0.0/10,DIRECT
