--- a/alircxa.conf
+++ b/alircxa.conf
@@ -1,16 +1,30 @@
-# Shadowrocket: 2024-02-06 13:09:55
+# Shadowrocket: 2024-04-26 21:11:16
 [General]
 bypass-system = true
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local
 ipv6 = true
 update-url = https://kut.st/conf
 # DNS
-dns-server = 1.1.1.1, 1.0.0.1
+#dns-server = 1.1.1.1, 1.0.0.1
 # Lan
 
 [Rule]
-#Rule
+# Proxy Rules plist
+RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/proxy/base.list,PROXY
 RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/proxy/telegram.list,PROXY
+RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/proxy/whatsapp.list,PROXY
+# Direct Rules plist
+RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/direct/base.list,DIRECT
+RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/direct/apple.list,DIRECT
+RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/direct/iran-url.list,DIRECT
+RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/direct/iran-cid.list,DIRECT
+# Reject Rules plist
+RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/reject/iran.list,REJECT
+RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/reject/adguards.list,REJECT
+RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/reject/apple.list,REJECT
+RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/reject/youtube.list,REJECT
+RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/reject/spotify.list,REJECT
+RULE-SET,https://raw.githubusercontent.com/Ja7ad/ShadowRocket/main/rules/reject/error-monitor.list,REJECT
 DOMAIN,imap.gmail.com,DIRECT
 DOMAIN,imap.gmx.com,DIRECT
 DOMAIN,imap.mail.yahoo.com,DIRECT
@@ -70,6 +84,7 @@ DOMAIN-SUFFIX,sanjesh.org,DIRECT
 DOMAIN-SUFFIX,sazito.com,DIRECT
 DOMAIN-SUFFIX,sdb247.com,DIRECT
 DOMAIN-SUFFIX,serveriran.net,DIRECT
+DOMAIN-SUFFIX,shahrzaad.city,DIRECT
 DOMAIN-SUFFIX,skype.com,DIRECT
 DOMAIN-SUFFIX,snapp-box.com,DIRECT
 DOMAIN-SUFFIX,snapp-food.com,DIRECT
