--- a/alircxa-old.conf
+++ b/alircxa-old.conf
@@ -2,10 +2,10 @@
 [General]
 bypass-system = true
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local
-ipv6 = true
-update-url = https://kut.st/conf
+ipv6 = false
+update-url = https://raw.githubusercontent.com/alircxa/shadowrocket-iran/refs/heads/main/alircxa-old.conf
 # DNS
-#dns-server = 1.1.1.1, 1.0.0.1
+#dns-server = 8.8.8.8
 # Lan
 
 [Rule]
