--- a/alircxa-new.conf
+++ b/alircxa-new.conf
@@ -1,14 +1,13 @@
-# Shadowrocket: 2024-05-11 02:00:42
+# Shadowrocket
 [General]
 bypass-system = true
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local, captive.apple.com
 tun-excluded-routes = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.0.0.0/24, 192.0.2.0/24, 192.88.99.0/24, 192.168.0.0/16, 198.18.0.0/15, 198.51.100.0/24, 203.0.113.0/24, 224.0.0.0/4, 255.255.255.255/32
-dns-server = 1.0.0.2, 1.1.1.2
-ipv6 = true
+dns-server = 8.8.8.8
+ipv6 = false
 prefer-ipv6 = false
 
 [Rule]
-IP-CIDR,95.217.193.11/32,DIRECT
 RULE-SET,https://raw.githubusercontent.com/Chocolate4U/Iran-clash-rules/release/ads.txt,REJECT
 RULE-SET,https://raw.githubusercontent.com/Chocolate4U/Iran-clash-rules/release/apps.txt,DIRECT
 RULE-SET,https://raw.githubusercontent.com/Chocolate4U/Iran-clash-rules/release/cryptominers.txt,REJECT
